--- a/_posts/2019-07-05-the-us-narrative-today.html
+++ b/_posts/2019-07-05-the-us-narrative-today.html
@@ -2579,107 +2579,107 @@ stories:
   domain: http://www.thenewsherald.com/
   link: http://www.thenewsherald.com/news/hospital-system-s-research-program-seeks-participants-for-ongoing-health/article_07214a16-9f56-11e9-9530-fffa6bd808ab.html
 images:
-- name: hollywood-building-hollywood-building-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-light-dali.jpg
-- name: aws-s3-tunnel-tunnel-purp-paper-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-tunnel-tunnel-purp-paper-still.jpg
-- name: power-lines-power-lines-empty-space-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-circuit-3.jpg
-- name: trucksilo-trucksilo-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-alberto-giacometti.jpg
-- name: yosemite-yosemite-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-pablo-blue.jpg
-- name: lincoln-memorial-lincolnmemorial-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-umberto-bocc.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-neo-instinct.jpg
-- name: bordercrossing-bordercrossing-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-oily-mcoilface.jpg
-- name: fence-mexico-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-kand-two.jpg
-- name: wreck-IMG_6984.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-IMG_6984.jpg
-- name: stories-supreme-court-statues.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-supreme-court-statues.jpg
-- name: victoria-victoria-corner-hotel-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-alien-goggles.jpg
-- name: white-house-lawn-white-house-lawn-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-aqua.jpg
-- name: old-door-lock-old-door-lock-2-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-crunch-paper.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-granite.jpg
-- name: bordercrossing-bordercrossing-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dali-three.jpg
-- name: stories-solidies-planning-attack-blue-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-solidies-planning-attack-blue-matrix.jpg
-- name: aws-s3-square-C2zqzsfVIAA2hcM-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C2zqzsfVIAA2hcM-square.jpg
-- name: oldhousecars-house-old-cars-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-hot-spicy.jpg
-- name: paris-paris-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-light-dali.jpg
-- name: old-church-oldchurch-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-crabapple.jpg
-- name: beach-clouds-lifeguard-beachclouds-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dark-soul.jpg
-- name: christianity-christianity-under-construction-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-attack-planes.jpg
-- name: paris-paris-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-rainbow-festival.jpg
-- name: razorcliff-razorcliff-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-nazi-poster.jpg
-- name: curtain-curtain-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-blue-circuit.jpg
-- name: liberty-back-statue-liberty-back-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-plentiful.jpg
-- name: berlinwall-DSC-0084-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-yellow-paper.jpg
-- name: status-berlin-status-berlin-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-jap-dys-1.jpg
-- name: udnie-concert-hall.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-concert-hall.jpg
-- name: crow-crow-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dry-skin.jpg
-- name: window-window-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-nazi-poster.jpg
-- name: bordercrossing-bordercrossing-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-internet-numbers.jpg
-- name: christianity-christianity-under-construction-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-granite.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-ww2-color.jpg
-- name: hollywood-building-hollywood-building-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-gan-vogh.jpg
-- name: white-house-whitehouse-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-plentiful.jpg
-- name: christianity-christianity-under-construction-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-oily-mcoilface.jpg
-- name: udnie-IMG_4833.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4833.jpg
-- name: capital-battle-capitolbattle-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-alien-goggles.jpg
-- name: locked-up-steam-lock-up-steam-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-china-prop.jpg
-- name: capital-battle-capitolbattle-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-yellow-collage.jpg
-- name: old-church-oldchurch-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-neo-instinct.jpg
-- name: aws-s3-square-old-gas-pumps-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-old-gas-pumps-square.jpg
-- name: stories-new-beach-rocks-currents-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-beach-rocks-currents-kand-two.jpg
-- name: cargo-ship-cargo-ship-on-sea-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dark-rain.jpg
-- name: window-window-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-umberto-bocc.jpg
-- name: subway-subway-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-internet-numbers.jpg
-- name: blossombar-gred-mash-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-gred-mash-file-00-00-50-62.jpg
-- name: amusement-park-amusement-park-2-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-electricity.jpg
-- name: flower-barbed-wire-flower-barbed-wire-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-alien-goggles.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dali-two.jpg
+- name: oldroad-old-road-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-colorful-blocks.jpg
+- name: oldtrain-oldtrain-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-crabapple.jpg
+- name: cyber-api-description-wars-img-1910.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-img-1910.jpg
+- name: oldbarn-oldbarn-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-marcel-duchamp.jpg
+- name: art-museum-art-museum-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-feed-people.jpg
+- name: oldtrain-oldtrain-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-clean-view.jpg
+- name: copper-circuit-old-building-green-awnings.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-building-green-awnings.jpg
+- name: server-cloud-server-racks-clouds-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-far-away.jpg
+- name: border-crossing-bordercrossing-dark-soul.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dark-soul.png
+- name: border-fence-border-fence-on-hill-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-creativity.jpg
+- name: store-on-corner-store-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-mucha-mult.jpg
+- name: window-window-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-gred-mash.jpg
+- name: berlinwall-DSC-0084-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-creativity.jpg
+- name: downtown-los-angeles-downtown-la-crunch-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-crunch-paper.JPG
+- name: downtown-los-angeles-downtown-la-colorful-blocks.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-colorful-blocks.JPG
+- name: mediterranean-mediterranean-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-colorful-dream.jpg
+- name: christianity-christianity-under-construction-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-internet-numbers.jpg
+- name: server-cloud-server-racks-clouds-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-satan-red.jpg
+- name: fence-fence-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-colored-circuits.jpg
+- name: store-on-corner-store-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-pablo-blue.jpg
+- name: oldhouse-oldhouse-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-feed-people.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-crafty-painting.jpg
+- name: store-on-corner-store-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-kandinsky-bv.jpg
+- name: miamibeach-miamibeach-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-dali-three.jpg
+- name: christianity-christianity-under-construction-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-spagetti-accident.jpg
+- name: locked-up-steam-lock-up-steam-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-clean-view.jpg
+- name: eduardo-eduardo-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-blue-circuit.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-wols.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-wols.JPG
+- name: aws-s3-stories-cargo-ship-on-sea-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-constitution.jpg
+- name: crow-crow-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dali-three.jpg
+- name: store-on-corner-oldcabin-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-emily-carr.jpg
+- name: oldhouse-oldhouse-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-horiz-circuit.jpg
+- name: cargo-ship-cargo-ship-on-sea-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-purple-pond.jpg
+- name: border-crossing-bordercrossing-graham-sutherland.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-graham-sutherland.png
+- name: castle-wall-DSC-0067-creativity.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-creativity.JPG
+- name: ellis-island-ellis-island-room-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-really-hot.jpg
+- name: gypsymosaic-gypsy-eyes-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-internet-numbers.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-mucha-mult.jpg
+- name: downtown-trucksilo-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-crunch-paper.jpg
+- name: power-lines-power-lines-empty-space-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-pablo-blue.jpg
+- name: sand-hand-sand-hand-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-colorful-dream.jpg
+- name: lincoln-memorial-lincolnmemorial-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-matrix.jpg
+- name: nazi-invasion-downtown-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-building.jpg
+- name: old-granary-field-oldhouse-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dry-skin.jpg
+- name: dragon_close-up-nazi-invasion.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-nazi-invasion.jpg
+- name: locked-up-steam-lock-up-steam-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-spagetti-accident.jpg
+- name: old-church-oldchurch-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-blue-electricity.jpg
+- name: hollywood-building-hollywood-building-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-internet-numbers.jpg
+- name: rockingchair-rockingchair-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-atari-missle.jpg
+- name: downtheline-downtheline-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-colorful-dream.jpg
 ---
 Russia Outraged By Case Of Sisters Who Killed Abusive Father.&nbsp;Samsung Predicts 56% Drop In 2Q Profit On Weak Chip Market.&nbsp;Contests Keep Nappanee Youngsters Busy.&nbsp;Man Caught On Video Using Metal Pipe To Break Into California Church.&nbsp;Bahamas Police Were Told Billionaire Cline Was On Helicopter.&nbsp;Eddy Merckx Celebrated As Tour De France's Great.&nbsp;Deercroft Community Holds Annual 4th Of July Event.&nbsp;Trump Weighs Executive Order To Add Census Citizenship Query.&nbsp;
